add post: using custom react hooks

--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ meta_description: Could not find this page.
 
 <div class="flex-center about-me">
 	<h1>404 - Page not found</h1>
-  <img src="/assets/images/not_found.svg" style="max-width: 450px; width: 100%;"/>
+  <img src="/assets/images/not_found.svg" style="max-width: 450px; width: 100%;" alt="florest with animals hiding"/>
 	<p>This page was either removed or doesn't exist.</p>
   <p><a href="/">Go back to the homepage</a></p>
 </div>
